# AnticLaw

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.example.yaml  pyproject.toml  start_bot.bat  start_bot.vbs
.github/workflows/: ci.yml
docs/: IMPORT_CLAUDE_EN.md  IMPORT_CLAUDE_RU.md  PLAN.md  PROVIDERS.md  QUICKSTART.md  SCRAPER.md  SPEC.md  TOOLS.md
src/anticlaw/: __init__.py
src/anticlaw/api/: __init__.py  server.py
src/anticlaw/bot/: __init__.py  __main__.py  bot.py  handlers.py  runner.py
src/anticlaw/cli/: api_cmd.py  backup_cmd.py  bot_cmd.py  clear_cmd.py  cron_cmd.py  daemon_cmd.py  graph_cmd.py  import_cmd.py  init_cmd.py  knowledge_cmd.py  listen_cmd.py  llm_cmd.py  main.py  mcp_cmd.py  project_cmd.py  scan_cmd.py  scraper_cmd.py  search_cmd.py  sync_cmd.py
src/anticlaw/core/: antientropy.py  config.py  entities.py  fileutil.py  graph.py  index.py  meta_db.py  models.py  retention.py  search.py  storage.py
src/anticlaw/daemon/: ipc.py  scheduler.py  service.py  tray.py  watcher.py
src/anticlaw/input/: __init__.py  base.py  whisper_input.py
src/anticlaw/llm/: __init__.py  ollama_client.py  qa.py  summarizer.py  tagger.py
src/anticlaw/mcp/: __main__.py  context_store.py  hooks.py  server.py
src/anticlaw/providers/: registry.py
src/anticlaw/providers/backup/: base.py  gdrive.py  local.py
src/anticlaw/providers/embedding/: base.py  ollama.py
src/anticlaw/providers/llm/: base.py  chatgpt.py  claude.py  gemini.py
src/anticlaw/providers/scraper/: __init__.py  base.py  claude.py
src/anticlaw/providers/source/: __init__.py  base.py  local_files.py
src/anticlaw/sync/: __init__.py  engine.py  providers.py
src/anticlaw/ui/: __init__.py  app.py
src/anticlaw/ui/templates/: _chat_list.html  _empty.html  _search_results.html  base.html  dashboard.html  inbox.html  projects.html  search.html
tests/unit/: test_antientropy.py  test_api_server.py  test_backup_base.py  test_backup_cmd.py  test_backup_gdrive.py  test_backup_local.py  test_bot_handlers.py  test_bot_runner.py  test_chatgpt_provider.py  test_claude_provider.py  test_clear_cmd.py  test_config.py  test_context_store.py  test_cron_cmd.py  test_daemon_cmd.py  test_embedding_provider.py  test_entities.py  test_fileutil.py  test_gemini_provider.py  test_graph.py  test_graph_cmd.py  test_hooks.py  test_import_chatgpt_cmd.py  test_import_cmd.py  test_import_gemini_cmd.py  test_init_cmd.py  test_input_base.py  test_ipc.py  test_knowledge_cmd.py  test_listen_cmd.py  test_llm_cmd.py  test_local_files_provider.py  test_mcp_cmd.py  test_mcp_tools.py  test_meta_db.py  test_meta_db_source_files.py  test_models.py  test_ollama_client.py  test_project_cmd.py  test_qa.py  (+24 more)
