[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anticlaw"
version = "0.1.0-dev"
description = "Local-first knowledge base for LLM conversations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Igor Zamiatin" }]
keywords = ["llm", "knowledge-base", "mcp", "cli", "local-first"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "python-frontmatter>=1.0",
    "keyring>=24.0",
]

[project.optional-dependencies]
search = ["bm25s>=0.2"]
fuzzy = ["rapidfuzz>=3.0"]
semantic = ["chromadb>=0.4", "numpy>=1.24", "httpx>=0.25"]
llm = ["httpx>=0.25"]
daemon = ["watchdog>=3.0", "apscheduler>=3.10", "pystray>=0.19", "pillow>=10.0", "plyer>=2.1"]
backup = ["google-api-python-client>=2.0", "boto3>=1.28"]
scraper = ["playwright>=1.40"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.4"]
all = [
    "anticlaw[search,fuzzy,semantic,llm,daemon,backup,scraper]",
]

[project.scripts]
aw = "anticlaw.cli.main:cli"

[project.urls]
Homepage = "https://github.com/izamiatin/anticlaw"
Repository = "https://github.com/izamiatin/anticlaw"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
